{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 310,
  "lineage": "747e6ab8-d7af-7ea7-a61e-54321b5bc4ca",
  "resources": [
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041eb8155ad1a1812",
            "arn": "arn:aws:ec2:us-east-1:119725011279:elastic-ip/eipalloc-041eb8155ad1a1812",
            "domain": "vpc",
            "id": "eipalloc-041eb8155ad1a1812",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-161-200-198.compute-1.amazonaws.com",
            "public_ip": "54.161.200.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:119725011279:instance/i-08eff0e54147f9468",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eff0e54147f9468",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0934b2922f854f8ca",
            "private_dns": "ip-10-100-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.238",
            "public_ip": "44.204.200.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0628d080022d91031",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cb0d8bb9019a121a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c6fae1b472a761a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb0d8bb9019a121a"
            ]
          },
          "dependencies": [
            "module.myvpc.aws_key_pair.deployer",
            "module.myvpc.aws_security_group.allow_ssh",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:internet-gateway/igw-0bd27f0543b469816",
            "id": "igw-0bd27f0543b469816",
            "owner_id": "119725011279",
            "tags": {
              "Name": "upgrad-igw"
            },
            "tags_all": {
              "Name": "upgrad-igw"
            },
            "vpc_id": "vpc-08134895f7970510f"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041eb8155ad1a1812",
            "association_id": "eipassoc-03d752649cd2cea52",
            "connectivity_type": "public",
            "id": "nat-0bcbbcaf93c60c142",
            "network_interface_id": "eni-0b9e3f3aa12756b45",
            "private_ip": "10.100.1.106",
            "public_ip": "54.161.200.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c6fae1b472a761a",
            "tags": {
              "Name": "upgrad-nat"
            },
            "tags_all": {
              "Name": "upgrad-nat"
            }
          },
          "dependencies": [
            "module.myvpc.aws_eip.eip",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:route-table/rtb-00dfa2e165cfb6fd0",
            "id": "rtb-00dfa2e165cfb6fd0",
            "owner_id": "119725011279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bcbbcaf93c60c142",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08134895f7970510f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_eip.eip",
            "module.myvpc.aws_nat_gateway.nat",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:route-table/rtb-058bbf27f2baab9b4",
            "id": "rtb-058bbf27f2baab9b4",
            "owner_id": "119725011279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd27f0543b469816",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08134895f7970510f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0282b55772eafa2f2",
            "route_table_id": "rtb-00dfa2e165cfb6fd0",
            "subnet_id": "subnet-012cbeef792b827ce"
          },
          "dependencies": [
            "module.myvpc.aws_eip.eip",
            "module.myvpc.aws_nat_gateway.nat",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private1",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07411b6a0bc16bcca",
            "route_table_id": "rtb-00dfa2e165cfb6fd0",
            "subnet_id": "subnet-07b70ecba58ab778e"
          },
          "dependencies": [
            "module.myvpc.aws_eip.eip",
            "module.myvpc.aws_nat_gateway.nat",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private2",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3bb0023cad748cb",
            "route_table_id": "rtb-058bbf27f2baab9b4",
            "subnet_id": "subnet-04c6fae1b472a761a"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public1",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561ceeb21fed8c07",
            "route_table_id": "rtb-058bbf27f2baab9b4",
            "subnet_id": "subnet-0c755ac43d1ddbb38"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public2",
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:security-group/sg-0cb0d8bb9019a121a",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb0d8bb9019a121a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "119725011279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08134895f7970510f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:subnet/subnet-012cbeef792b827ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012cbeef792b827ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119725011279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-private-1"
            },
            "tags_all": {
              "Name": "upgrad-private-1"
            },
            "vpc_id": "vpc-08134895f7970510f"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:subnet/subnet-07b70ecba58ab778e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b70ecba58ab778e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119725011279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-private-2"
            },
            "tags_all": {
              "Name": "upgrad-private-2"
            },
            "vpc_id": "vpc-08134895f7970510f"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:subnet/subnet-04c6fae1b472a761a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c6fae1b472a761a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119725011279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-public-1"
            },
            "tags_all": {
              "Name": "upgrad-public-1"
            },
            "vpc_id": "vpc-08134895f7970510f"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:subnet/subnet-0c755ac43d1ddbb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c755ac43d1ddbb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119725011279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-public-2"
            },
            "tags_all": {
              "Name": "upgrad-public-2"
            },
            "vpc_id": "vpc-08134895f7970510f"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:vpc/vpc-08134895f7970510f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-04d3b879882e100ce",
            "default_route_table_id": "rtb-0fa286b04210d6d1b",
            "default_security_group_id": "sg-07568b4cbc0d63b25",
            "dhcp_options_id": "dopt-0ca4afc030f42efb7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08134895f7970510f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa286b04210d6d1b",
            "owner_id": "119725011279",
            "tags": {
              "Name": "upgrad-vpc"
            },
            "tags_all": {
              "Name": "upgrad-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119725011279:security-group/sg-0007ee200d85bf094",
            "description": "Security group for RDS instance",
            "egress": [],
            "id": "sg-0007ee200d85bf094",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "119725011279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08134895f7970510f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}